--- a/page1.html
+++ b/page1.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Playstation 1</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Page 1</h1>
+    <table border="1">
+        <tr>
+            <th><a href="index.html"></a></th>
+            <th><a href="page1.html"></a></th>
+            <th><a href="page2.html"></a></th>
+            <th><a href="page3.html"></a></th>
+            <th><a href="page4.html"></a></th>
+            <th><a href="page5.html"></a></th>
+    </tr>
+    <tr>
+        <td>Home</td>
+        <td>1994</td>
+        <td>2000</td>
+        <td>2006</td>
+        <td>2013</td>
+        <td>2020</td>
+    </tr>
+</table>
+<div>
+    <h1>PlayStation 1</h1>
+</div class="play1">
+    <center>
+            <img src="https://cdn.mos.cms.futurecdn.net/8ZT9ejtctHEWAr4s6vTj9U-970-80.jpg.webp" alt="">
+    </center>
 </body>
 </html>
