--- a/page2.html
+++ b/page2.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>PlayStation 2</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Page 2</h1>
+    <table border="1">
+        <tr>
+            <th><a href="index.html"></a></th>
+            <th><a href="page1.html"></a></th>
+            <th><a href="page2.html"></a></th>
+            <th><a href="page3.html"></a></th>
+            <th><a href="page4.html"></a></th>
+            <th><a href="page5.html"></a></th>
+    </tr>
+    <tr>
+        <td>Home</td>
+        <td>1994</td>
+        <td>2000</td>
+        <td>2006</td>
+        <td>2013</td>
+        <td>2020</td>
+    </tr>
+</table>
+<div class="play2">
+    <h1>PlayStation 2</h1>
+</div>
+<center>
+    <img src="https://s.yimg.com/uu/api/res/1.2/vUMDEaJXrdVnUcYGp4j5Ww--~B/Zmk9ZmlsbDtoPTQwNDt3PTY3NTthcHBpZD15dGFjaHlvbg--/https://s.yimg.com/uu/api/res/1.2/uC5xbC.PBvajywrTzUbnpw--~B/aD04OTE7dz0xNDkwO2FwcGlkPXl0YWNoeW9u/https://o.aolcdn.com/images/dims?resize=2000%2C2000%2Cshrink&image_uri=https%3A%2F%2Fs.yimg.com%2Fos%2Fcreatr-uploaded-images%2F2020-03%2Fed453420-5e33-11ea-993d-3623d0d55bc4&client=a1acac3e1b3290917d92&signature=61e52ade0288dbd269ca8297658379eeef2e5bd9.cf.webp" alt="">
+</center>
 </body>
 </html>
