--- a/index.html
+++ b/index.html
@@ -7,7 +7,107 @@
     <title>Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="hotdog">
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">PlayStaion</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="page1.html">PLayStation 1</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="page2.html">PLayStation 2</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="page3.html">PLayStation 3</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="page4.html">PLayStation 4</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="page5.html">PLayStation 5</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">Disabled</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    <table border="2">
+        <tr>
+            <th><a href="index.html">Home Page</a></th>
+            <th><a href="page1.html">Playstation 1</a></th>
+            <th><a href="page2.html">Playstation 2</a></th>
+            <th><a href="page3.html">Playstation 3</a></th>
+            <th><a href="page4.html">Playstation 4</a></th>
+            <th><a href="page5.html">Playstation 5</a></th>
+        </tr>
+        <tr>
+            <td>Home</td>
+            <td>1994</td>
+            <td>2000</td>
+            <td>2006</td>
+            <td>2013</td>
+            <td>2020</td>
+        </tr>
+    </table>
+
     <h1>Home Page</h1>
+    <center>
+        <h6>Source:Hadlee Simons, androidauthority.com/ <a href="https://www.androidauthority.com/playstation-history-1220628/"></a></h6>
+    </center>
+    <ol>
+        <h2>Evolution of the Playstation</h2>
+
+            <li>Playstion 1</li>
+                <a href="https://www.creativebloq.com/reviews/playstation-classic">https://www.creativebloq.com/reviews/playstation-classic</a>
+                    <img src="https://cdn.mos.cms.futurecdn.net/8ZT9ejtctHEWAr4s6vTj9U-1200-80.jpg.webp" alt="" height="200" width="200"
+                <h6>Source: Ian Dean, creativebloq.com<a href="https://cdn.mos.cms.futurecdn.net/8ZT9ejtctHEWAr4s6vTj9U-1200-80.jpg.webp"></a> </h6>
+
+                <li>Playstion 2</li>
+                <a href="https://videogamecritic.com/ps2info.htm">https://videogamecritic.com/ps2info.htm</a>
+                    <img src="https://videogamecritic.com/images/systems2/ps2-up.jpg" alt="" height="200" width="200"
+                <h6>Source: The Video Game Critic, videogamecritic.com<a href="https://videogamecritic.com/images/systems2/ps2-up.jpg"></a> </h6>
+
+                <li>Playstion 3</li>
+                <a href="https://videogamecritic.com/ps3info.htm">https://videogamecritic.com/ps3info.htm</a>
+                    <img src="https://videogamecritic.com/images/systems2/ps3-orig.jpg" alt="" height="200" width="200"
+                <h6>Source: The Video Game Critic, videogamecritic.com<a href="https://videogamecritic.com/images/systems2/ps3-orig.jpg"></a> </h6>
+
+                <li>Playstion 4</li>
+                <a href="https://www.techradar.com/reviews/gaming/games-consoles/sony-ps4-1202432/review">https://www.techradar.com/reviews/gaming/games-consoles/sony-ps4-1202432/review</a>
+                    <img src="https://cdn.mos.cms.futurecdn.net/5b44d4908a632806d6304b2480d1a3b0-1200-80.jpg.webp" alt="" height="200" width="200"
+                <h6>Source: TechRadar, www.techradar.com<a href="https://cdn.mos.cms.futurecdn.net/5b44d4908a632806d6304b2480d1a3b0-1200-80.jpg.webp"></a> </h6>
+
+                <li>Playstion 5</li>
+                <a href="https://www.tomsguide.com/reviews/ps5">https://www.tomsguide.com/reviews/ps5</a>
+                    <img src="https://cdn.mos.cms.futurecdn.net/UeqCZzYknQfx5sBrkXBc4P-1200-80.jpg.webp" alt="" height="200" width="200"
+                <h6>Source: Tom's Guide, www.tomsguide.com<a href="https://cdn.mos.cms.futurecdn.net/UeqCZzYknQfx5sBrkXBc4P-1200-80.jpg.webp"></a> </h6>
+
+    </ol>
+
 </body>
 </html>
